Bug 1541668 - Make nsTextFrame::GetRenderedText ignore full-width and full-size-kana transforms. r=Jamie,mats

Differential Revision: https://phabricator.services.mozilla.com/D26146

--HG--
extra : moz-landing-system : lando